# vision-ROS

./: .gitmodules  CMakeLists.txt  README.md  package.xml  run_script.sh  setup.py  trt_yolo_v4.py  trt_yolo_v7.py
launch/: yolov4_trt.launch
msg/: Detector2D.msg  Detector2DArray.msg
plugins/: Makefile
src/: tracker_node.cpp
utils/: visualization.py  yolo_classes.py  yolo_with_plugins.py
yolo/: download_yolo.sh  yolov4-288.cfg
